--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
+    "styled-components": "^6.1.13",
+    "validator": "^13.12.0",
     "yarn": "^1.22.22"
   },
   "devDependencies": {
